--- a/basicWindow/basicWindow.css
+++ b/basicWindow/basicWindow.css
@@ -7,7 +7,8 @@ html,body{
 .ui-window {
   z-index:9999;
 }
-.ui-basicWindow-overlay {
+
+.ui-overlay {
  position:absolute; 
  top: 0; 
  left: 0; 
@@ -18,7 +19,8 @@ html,body{
  opacity:0.2;
 }
 
-.ui-window-single {
+.ui-window {
+  position:absolute; 
   background:#fefefe;
   border:1px solid #000;     
   box-shadow: 10px 10px 5px #888;
