--- a/okDrag/okDrag.css
+++ b/okDrag/okDrag.css
@@ -6,6 +6,7 @@ ul {
 
 #list0 {
   list-style: circle;
+  margin-left:20px;
   cursor: move;
 }
 
@@ -15,22 +16,22 @@ ul {
 	margin:0;
 }
 
-  .list2d li {
-    float:left;
-    padding:5px;
-    width:100px;
-    height:100px;
-    cursor: move;
-  }
+.list2d li {
+  float:left;
+  padding:5px;
+  width:100px;
+  height:100px;
+  cursor: move;
+}
 
-    .list2d div {
-      width:90px;
-      height:50px;
-      border:solid 1px #000;
-      background:#E0E0E0;
-      text-align:center;
-      padding-top:40px;
-    }
+.list2d div {
+  width:90px;
+  height:50px;
+  border:solid 1px #000;
+  background:#E0E0E0;
+  text-align:center;
+  padding-top:40px;
+}
 
 #list2 {
 	float:left;
