--- a/okNotify/screen.css
+++ b/okNotify/screen.css
@@ -1,90 +1,1 @@
-/*=================== RESET ======================== */
-
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;}
-body {line-height:1.5;}
-table {border-collapse:separate;border-spacing:0;}
-caption, th, td {text-align:left;font-weight:normal;}
-table, td, th {vertical-align:middle;}
-blockquote:before, blockquote:after, q:before, q:after {content:"";}
-blockquote, q {quotes:"" "";}
-a img {border:none;}
-
-/*=================== BASE ======================== */
-
-body {
-	font-family:"Helvetica Neue", Arial, Helvetica, sans-serif, 'Liberation Sans', FreeSans, sans-serif;
-  font-size:62.5%; /* Set 1em = 10px */
-}
-
-/*=================== TYPOGRAPHY ================== */
-
-html {font-size:100.01%;}
-body {font-size:75%;color:#222;background:#ccc;font-family: Arial, Helvetica, sans-serif;}
-h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#09f;}
-h1 {font-size:3em;line-height:1;margin-bottom:0.5em;}
-h2 {font-size:2em;margin-bottom:0.75em;}
-h3 {font-size:1.5em;line-height:1;margin-bottom:1em;}
-h4 {font-size:1.2em;line-height:1.25;margin-bottom:1.25em;}
-h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
-h6 {font-size:1em;font-weight:bold;}
-p {margin:0 0 1.5em;}
-a:focus, a:hover {color:#000;}
-a {color:#009;text-decoration:underline;}
-blockquote {margin:1.5em;color:#666;font-style:italic;}
-strong {font-weight:bold;}
-pre {padding: 4px 6px 6px;white-space:pre;border-left:6px solid #09a; margin-bottom:12px; overflow:auto; position:relative; background: #efefef;}
-pre, code, tt {font:1em 'andale mono', 'lucida console', monospace;}
-li ul, li ol {margin:0;}
-ul, ol {margin:0 1.5em 1.5em 0;padding-left:3.333em;}
-ul {list-style-type:none;}
-ol {list-style-type:none;}
-dl {margin:0 0 1.5em 0;}
-dl dt {font-weight:bold;}
-dd {margin-left:1.5em;}
-.small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
-.large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
-.hide {display:none;}
-.quiet {color:#666;}
-.loud {color:#000;}
-.highlight {background:#ff0;}
-
-
-
-/* Tables
---------------------------------------------------------- */
-
-table {margin-bottom:1.4em;width:100%;}
-th {background:#c3d9ff;font-weight:bold;}
-thead th {background:#c3d9ff;}
-th, td, caption {padding:4px 10px 4px 5px;}
-tr.even td {background:#e5ecf9;}
-tfoot { font-style:italic; }
-
-/*=================== FORM ======================== */
-
-label {font-weight:bold;display:block;}
-fieldset {padding:1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
-legend {font-weight:bold;font-size:1.2em;}
-input[type=text], input[type=password], input.text, input.title, textarea, select {width:300px;background-color:#fff;border:1px solid #bbb;}
-input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {border-color:#666;}
-input[type=text], input[type=password], input.text, input.title, textarea, select {margin:0.5em 0;}
-textarea {width:390px;height:250px;padding:5px;}
-input[type=checkbox], input[type=radio], input.checkbox, input.radio {position:relative;top:.25em;}
-form.inline {line-height:3;}
-form.inline p {margin-bottom:0;}
-.error, .notice, .success {padding:.8em;margin-bottom:1em;border:2px solid #ddd;}
-.error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
-.notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
-.success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
-.error a {color:#8a1f11;}
-.notice a {color:#514721;}
-.success a {color:#264409;}
-
-.clear { clear:both; display:block; overflow:hidden; visibility:hidden; width:0; height:0; } 
-.clearfix:after { clear:both; content:'.'; display:block; visibility:hidden; height:0; }
-
-/*=================== Layout ======================== */
-
-#doc { width: 920px; background: #fff; margin:0 auto; padding: 20px; height:100%;}
-.box {padding:1.5em;margin-bottom:1.5em;background:#E5ECF9;}
-.ct {padding:1em;}
+../shared/screen.css
