--- a/okTips/jquery.okTips.css
+++ b/okTips/jquery.okTips.css
@@ -9,31 +9,32 @@
   -webkit-box-shadow: 0px 0px 8px rgba(255,255,255,0.5);
 }
 
-  .ui-tooltip p {
-    margin: 1em;
-  }
+.ui-tooltip p {
+  margin: 1em;
+  padding:0;
+}
 
-  .ui-tooltip .panel li span,
-  .ui-tooltip .panel li a {
-    display:block;
-    text-decoration:none;
-    padding:2px 0 4px 12px;
-    font-size:12px;
-  }
+.ui-tooltip .panel li span,
+.ui-tooltip .panel li a {
+  display:block;
+  text-decoration:none;
+  padding:2px 0 4px 12px;
+  font-size:12px;
+}
 
-  .ui-tooltip li ul {
-    margin:0;
-  }
+.ui-tooltip li ul {
+  margin:0;
+}
 
-  .ui-tooltip .ui-tooltip-title { 
-    line-height: 1.8em; 
-  }
+.ui-tooltip .ui-tooltip-title { 
+  line-height: 1.8em; 
+}
 
-  .ui-tooltip .spinner {
-    display:none;
-    float:right;
-    margin:0 6px 0 2px
-  }
+.ui-tooltip .spinner {
+  display:none;
+  float:right;
+  margin:0 6px 0 2px
+}
 
 .ui-widget-overlay {
   background: #000;
@@ -44,4 +45,15 @@
 .spacer {
   position: relative;
   height: 300px;
+}
+
+.ui-widget-overlay { 
+  background:#121111;
+  opacity:0.5;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  z-index:1000;
 }
