--- a/okTips/jquery.okTips.css
+++ b/okTips/jquery.okTips.css
@@ -9,6 +9,26 @@
   -webkit-box-shadow: 0px 0px 8px rgba(255,255,255,0.5);
 }
 
+.ui-tooltip:before ,
+.ui-tooltip:after {
+  content:'\0020';
+  position:absolute;
+  top: 17px; 
+  left: -10px; 
+  width:0;
+  height:0;
+  border-color: transparent #000 transparent transparent;
+  border-style: solid;
+  border-width: 5px;
+}
+
+.ui-tooltip:before {
+  top: 16px; 
+  left: -13px; 
+  border-color: transparent #fff transparent transparent;
+  border-width: 6px;
+}
+
 .ui-tooltip p {
   margin: 1em;
   padding:0;
