--- a/shared/screen.css
+++ b/shared/screen.css
@@ -108,7 +108,7 @@ footer h1 a:hover{
 
 /* ........................................................... [02.TYPOGRAPHY] */
 
-p { padding:0 0 1.5em 1em; word-spacing:0.08em; letter-spacing:0.03em; }
+p { padding:0 0 1.5em 0; word-spacing:0.08em; letter-spacing:0.03em; }
 p img { float: left; margin: 0 1em 1em 0; padding: 0; }
 p img.right { float: right; margin: 0 0 1em 1em;  }
 
