Add imageZoom default UI

--- a/shared/screen.css
+++ b/shared/screen.css
@@ -303,6 +303,6 @@ label { display: block; margin-bottom:0.5em; }
   border: 1px solid #ddd;
   border-color: #ccc #ddd #eee;
   border-radius: 6px;
-  margin: 0 0 10px 0;
+  margin: 0 0 2em 0;
   padding: 10px;
 }
