--- a/okPopup/okPopup.css
+++ b/okPopup/okPopup.css
@@ -36,14 +36,13 @@
   -webkit-border-radius: 4px 4px 4px 4px;
 }
 
-
-.ui-widget-overlay {
+.ui-overlay {
   background: rgba(0,0,0,0.2);
   position: fixed; 
   top: 0; 
   left: 0; 
-  width: 100%; 
-  height: 100%; 
+  right: 0;
+  bottom: 0;
   z-index:1000;
 }
 
