[okCycle] Improve UI handling

--- a/okCycle/okCycle.css
+++ b/okCycle/okCycle.css
@@ -69,3 +69,8 @@ section {
 #example_three li {
   background: #fff url('images/spinner.gif') center center no-repeat;
 }
+
+.slideshow li {
+  width: 620px;
+  height: 400px;
+}
