--- a/okPopup/okPopup.css
+++ b/okPopup/okPopup.css
@@ -36,7 +36,7 @@
   -webkit-border-radius: 4px 4px 4px 4px;
 }
 
-.ui-overlay {
+#ui-overlay {
   background: rgba(0,0,0,0.2);
   position: fixed; 
   top: 0; 
@@ -67,13 +67,11 @@
 }
 
 #example-5 {
-  float: left;
   width: 100%;
-  clear: both;
 }
 
 #example-5 li {
-  float: left;
+  display: inline-block;
 }
 
 .ui-popup ul {
@@ -99,4 +97,34 @@
 .ui-popup .close {
   top: 0;
   right: 0;
+}
+
+.ui-popup.responsive {
+  border: 1px solid #aaa;
+  background: #fff url(../shared/spinner.gif) center center no-repeat;
+  box-shadow: 0 0 5px #000;
+  width: 32px;
+  height: 32px;
+  color: #222;
+}
+
+.ui-popup nav,
+.ui-popup header{
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+}
+
+.ui-popup header{
+  top: 0;
+  right: 0;
+}
+
+.ui-popup nav {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.ui-popup nav a{
+  margin-right: 10px;
 }
