--- a/okPopup/okPopup.css
+++ b/okPopup/okPopup.css
@@ -1,6 +1,30 @@
+/* Example Styles */
+
+#gallery-example {
+  width: 100%;
+}
+
+#gallery-example li {
+  display: inline-block;
+}
+
+/* General */
+
 .ui-popup {
   z-index:1001;
 }
+
+.ui-overlay {
+  background: rgba(0,0,0,0.2);
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  right: 0;
+  bottom: 0;
+  z-index:1000;
+}
+
+/* Tooltips */
 
 .ui-popup.tooltip {
   padding: 5px;
@@ -12,7 +36,6 @@
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
 }
-
 
 .ui-popup.tooltip:after {
   content:'\0020';
@@ -27,24 +50,7 @@
   border-top: 5px solid rgba(0,0,0,0.7);
 }
 
-.ui-popup.modal {
-  padding: 5px;
-  background: #fff;
-  border: 1px solid #666;
-  color:#000;
-  -moz-border-radius: 4px 4px 4px 4px;
-  -webkit-border-radius: 4px 4px 4px 4px;
-}
-
-#ui-overlay {
-  background: rgba(0,0,0,0.2);
-  position: fixed; 
-  top: 0; 
-  left: 0; 
-  right: 0;
-  bottom: 0;
-  z-index:1000;
-}
+/* Notification Queue */
 
 .ui-popup.notification {
   padding:10px;
@@ -66,12 +72,19 @@
   right:10px;
 }
 
-#example-5 {
-  width: 100%;
-}
+/* Modals */
 
-#example-5 li {
-  display: inline-block;
+.ui-popup.modal {
+  padding: 5px;
+  background: #fff url(../shared/spinner.gif) center center no-repeat;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border: 1px solid #aaa;
+  box-shadow: 0 0 5px #000;
+  width: 32px;
+  height: 32px;
+  color: #222;
 }
 
 .ui-popup ul {
@@ -97,15 +110,6 @@
 .ui-popup .close {
   top: 0;
   right: 0;
-}
-
-.ui-popup.responsive {
-  border: 1px solid #aaa;
-  background: #fff url(../shared/spinner.gif) center center no-repeat;
-  box-shadow: 0 0 5px #000;
-  width: 32px;
-  height: 32px;
-  color: #222;
 }
 
 .ui-popup nav,
