--- a/shared/screen.css
+++ b/shared/screen.css
@@ -220,6 +220,7 @@ fieldset { margin-bottom:20px; }
 input, select, textarea { box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; }
 
 input[type="text"],
+input[type="number"],
 input[type="password"],
 input[type="email"],
 textarea,
