--- a/shared/screen.css
+++ b/shared/screen.css
@@ -7,6 +7,7 @@
 02.TYPOGRAPHY
 03.FORMS
 04.GRID
+05.SYNTAX
 ------------------------------------------------*/
 
 /* ........................................................... [00.RESET] */
@@ -317,4 +318,55 @@ label { display: block; margin-bottom:0.5em; }
   border-radius: 6px;
   margin: 0 0 2em 0;
   padding: 10px;
+}
+
+/* ........................................................... [05.SYNTAX] */
+
+/**
+ * Tomorrow Night theme
+ *
+ * @author Chris Kempson
+ * @author skim
+ * @version 1.0.0
+ */
+pre {
+    background-color: #1d1f21;
+    word-wrap: break-word;
+    margin: 0px;
+    padding: 0 10px;
+    color: #c5c8c6;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+pre, code {
+    font-family: 'Monaco', courier, monospace;
+}
+
+pre .comment {
+    color: #969896;
+}
+
+pre .variable.global, pre .variable.class, pre .variable.instance {
+    color: #cc6666; /* red */
+}
+
+pre .constant.numeric, pre .constant.language, pre .constant.hex-color, pre .keyword.unit {
+    color: #de935f; /* orange */
+}
+
+pre .constant, pre .entity, pre .entity.class, pre .support {
+    color: #f0c674; /* yellow */
+}
+
+pre .constant.symbol, pre .string {
+    color: #b5bd68; /* green */
+}
+
+pre .entity.function, pre .support.css-property, pre .selector {
+    color: #81a2be; /* blue */
+}
+
+pre .keyword, pre .storage {
+    color: #b294bb; /* purple */
 }
