--- a/okCycle/okCycle.css
+++ b/okCycle/okCycle.css
@@ -73,4 +73,23 @@ section {
 .slideshow li {
   width: 620px;
   height: 400px;
+  background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAGElEQVQYlWNgYGCQwoKxgqGgcJA5h3yFAAs8BRWVSwooAAAAAElFTkSuQmCC);
+}
+
+#progress {
+  border: 1px solid #999;
+  width: 100%;
+  height: 16px;
+  margin-bottom: 10px;
+}
+
+#progress div {
+  background-color: #dd0;
+  background-image:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAADklEQVQIW2NgQAXGZHAAGioAza6+Hk0AAAAASUVORK5CYII=);
+  height: 100%;
+  width: 0%;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  line-height: 16px;
 }
